<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.novsu.antonivanov.exampleproject.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonGoRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/button_go_recycler_view"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/button_go_"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGoCustomBehavior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/button_go_custom_behavior"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGoTestNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/button_go_notification"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGoTestWebView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/button_go_webview"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGoSharingFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/button_go_sharing_fb"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
